tests/fails/incompatible_size.mat
matrix a[2,3]
matrix b[3,2]
matrix c[2,2]

c = tr(a) * b